--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,9 +62,19 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/splash_logo.png
+     - assets/json/
+     - assets/images/dashboard/
+     - assets/images/best_seal_and_top_product/
+     - assets/images/componets_categories/
+     - assets/images/componets_categories/capacitor/
+     - assets/images/componets_categories/circuits/
+     - assets/images/componets_categories/inductors/
+     - assets/images/componets_categories/resistor_option/
+     - assets/images/componets_categories/transistor/
+     - assets/images/explore_new_arrivals/
+     - assets/images/get_discount/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
